# buoy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  apptainer.def  conda-lock.yml  environment.yaml  pyproject.toml
.doctrees/: environment.pickle
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-container.yaml  unit-tests.yaml
buoy/: cli.py  config.yaml  main.py  single_event_analysis.py
buoy/config/: config.yaml
buoy/models/: aframe.py  amplfi.py
buoy/outdir/GW190828_063405/data/: amplfi_HLV.fits
buoy/utils/: data.py  detection.py  pe.py  plotting.py
docs/: conf.py
outdir/GW190521/data/: amplfi_HLV.fits  whitened_data.npy
tests/: test_data.py  test_main.py
