[project]
name = "buoy"
version = "0.0.1"
description = "Deploy Aframe and AMPLFI models over open data"
authors = [
    { name = "Will Benoit", email = "benoi090@umn.edu" },
]
requires-python = ">=3.10,<3.13"
license = "MIT"
dependencies = [
    "aframe",
    "amplfi>=0.4.0",
    "ml4gw>=0.7.4",
    "omegaconf>=2.3.0,<3",
    "numpy<2.0.0",
    "scipy<1.15",
    "matplotlib==3.9.4",
    "ligo-skymap>=2.2.2,<3",
]

[project.scripts]
online = "online.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.2.1,<9",
    "jupyter>=1.0.0,<2",
]

[tool.uv]

[[tool.uv.index]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
aframe = { path = "aframe", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
